--- a/package.json
+++ b/package.json
@@ -6,10 +6,13 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "storybook": "^8.3.6",
+    "react-refresh": "^0.14.2",
+    "react-scripts": "^5.0.1",
+    "storybook": "^8.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -41,17 +44,18 @@
   },
   "devDependencies": {
     "@chromatic-com/storybook": "^1.9.0",
-    "@storybook/addon-essentials": "^8.3.6",
-    "@storybook/addon-interactions": "^8.3.6",
-    "@storybook/addon-links": "^8.3.6",
-    "@storybook/addon-onboarding": "^8.3.6",
-    "@storybook/blocks": "^8.3.6",
-    "@storybook/preset-create-react-app": "^8.3.6",
-    "@storybook/react": "^8.3.6",
-    "@storybook/react-webpack5": "^8.3.6",
-    "@storybook/test": "^8.3.6",
+    "@storybook/addon-essentials": "^8.4.0",
+    "@storybook/addon-interactions": "^8.4.0",
+    "@storybook/addon-links": "^8.4.0",
+    "@storybook/addon-onboarding": "^8.4.0",
+    "@storybook/blocks": "^8.4.0",
+    "@storybook/preset-create-react-app": "^8.4.0",
+    "@storybook/react": "^8.4.0",
+    "@storybook/react-webpack5": "^8.4.0",
+    "@storybook/test": "^8.4.0",
     "eslint-plugin-storybook": "^0.10.1",
     "prop-types": "^15.8.1",
-    "webpack": "^5.95.0"
+    "webpack": "^5.96.0",
+    "webpack-cli": "^5.1.4"
   }
 }
