--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@storybook/react": "^8.3.6",
     "@storybook/react-webpack5": "^8.3.6",
     "@storybook/test": "^8.3.6",
+    "@svgr/webpack": "^8.1.0",
     "eslint-plugin-storybook": "^0.10.1",
     "prop-types": "^15.8.1",
     "webpack": "^5.95.0"
